--- a/src/index.css
+++ b/src/index.css
@@ -15,41 +15,61 @@ body {
   font-family: 'Glacial Indifference', sans-serif;
 }
 
-/* index.css */
-.react-photo-gallery--gallery {
-  z-index: 0; /* Ensure the gallery is behind the lightbox */
+/* Custom styles for react-image-lightbox */
+.ril__toolbar {
+  background: transparent !important;
+  border: none !important;
+}
+
+.ril__toolbarSide {
+  background: transparent !important;
+}
+
+.ril__toolbarItem {
+  background: transparent !important;
 }
 
 .custom-close-button {
-  background-color: rgba(255, 0, 0, 0.8) !important; /* Make close button more visible */
+  background-color: red;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
   position: absolute;
   top: 10px;
   right: 10px;
-  z-index: 1100;
-  border: none;
-  padding: 10px;
+  z-index: 1500; /* Ensure it's in front */
+}
+
+.ril__builtinButton {
+  background: transparent !important;
+  border: none !important;
+  color: white;
   cursor: pointer;
 }
 
-.custom-nav-button {
-  background-color: rgba(0, 0, 0, 0.5) !important;
-  border: none;
-  padding: 10px;
+.ril__navButtons {
+  background: transparent !important;
+  border: none !important;
+}
+
+.ril__navButtonPrev,
+.ril__navButtonNext {
+  background: transparent !important;
+  border: none !important;
+  color: white !important;
   cursor: pointer;
-  z-index: 1100; /* Ensure the buttons are above the content */
-  color: white !important; /* Ensure the icon color is visible */
+  z-index: 1200; /* Ensure it's in front */
 }
 
-.custom-nav-button-prev {
-  position: absolute;
-  left: 10px;
-  top: 50%;
-  transform: translateY(-50%);
+.ril__navButtonPrev:before,
+.ril__navButtonNext:before {
+  content: '‹'; /* Left and right arrow symbols */
+  font-size: 40px;
+  color: white;
+  background: transparent;
+  border: none;
 }
 
-.custom-nav-button-next {
-  position: absolute;
-  right: 10px;
-  top: 50%;
-  transform: translateY(-50%);
+.ril__navButtonNext:before {
+  content: '›'; /* Right arrow symbol */
 }
